src/objects/Charket__WeChatTranscriptItem__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerLastActivityTime__c</fullName>
        <formula>Charket__WeChatTranscript__r.Charket__WeChatFollower__r.Charket__LastActivityTime__c</formula>
        <label>Follower Last Activity Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerName__c</fullName>
        <formula>Charket__WeChatTranscript__r.Charket__FollowerName__c</formula>
        <label>Follower Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerPhotoUrl__c</fullName>
        <formula>IF( BEGINS(Charket__WeChatTranscript__r.Charket__WeChatFollower__r.Charket__WeChatProfilePhotoUrl__c, &apos;https&apos;) , Charket__WeChatTranscript__r.Charket__WeChatFollower__r.Charket__WeChatProfilePhotoUrl__c ,&apos;https&apos; + RIGHT(Charket__WeChatTranscript__r.Charket__WeChatFollower__r.Charket__WeChatProfilePhotoUrl__c, LEN(Charket__WeChatTranscript__r.Charket__WeChatFollower__r.Charket__WeChatProfilePhotoUrl__c) - 4 ))</formula>
        <label>Follower Photo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__HasMore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has more body content</description>
        <label>Has More</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsKeyword__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keyword</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__MediaId__c</fullName>
        <label>Media ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__MediaLongUrl__c</fullName>
        <label>Media Long URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__MediaUrl__c</fullName>
        <label>Media URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__MessageId__c</fullName>
        <description>WeChat Message ID from WeChat platform</description>
        <externalId>true</externalId>
        <label>Message ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__ReadTime__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Read Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Recongnition__c</fullName>
        <label>Recongnition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__ResponseBody__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__SendBy__c</fullName>
        <label>Send By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Follower</fullName>
                </value>
                <value>
                    <fullName>Charket Bot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__SenderId__c</fullName>
        <label>Sender ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__ShortBody__c</fullName>
        <label>Short Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charket__ThumbMediaId__c</fullName>
        <label>ThumbMedia ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__ThumbMediaUrl__c</fullName>
        <label>ThumbMedia URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__TranscriptNumber__c</fullName>
        <formula>Charket__WeChatTranscript__r.Name</formula>
        <label>Transcript Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TEXT</fullName>
                </value>
                <value>
                    <fullName>IMAGE</fullName>
                </value>
                <value>
                    <fullName>VOICE</fullName>
                </value>
                <value>
                    <fullName>VIDEO</fullName>
                </value>
                <value>
                    <fullName>MUSIC</fullName>
                </value>
                <value>
                    <fullName>NEWS</fullName>
                </value>
                <value>
                    <fullName>SHORTVIDEO</fullName>
                </value>
                <value>
                    <fullName>LOCATION</fullName>
                </value>
                <value>
                    <fullName>LINK</fullName>
                </value>
                <value>
                    <fullName>CLICK</fullName>
                </value>
                <value>
                    <fullName>VIEW</fullName>
                </value>
                <value>
                    <fullName>CARD</fullName>
                </value>
                <value>
                    <fullName>SUBSCRIBE</fullName>
                </value>
                <value>
                    <fullName>UNSUBSCRIBE</fullName>
                </value>
                <value>
                    <fullName>SCAN</fullName>
                </value>
                <value>
                    <fullName>TRANSFER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatAgentId__c</fullName>
        <externalId>true</externalId>
        <label>WeChat Agent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatCreatedTime__c</fullName>
        <description>Created Time from WeChat platform</description>
        <label>WeChat Created Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatFollowerId__c</fullName>
        <formula>CASESAFEID(Charket__WeChatTranscript__r.Charket__WeChatFollower__c)</formula>
        <label>WeChat Follower ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatResponseIds__c</fullName>
        <label>WeChat Response IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatTranscript__c</fullName>
        <label>WeChat Transcript</label>
        <referenceTo>Charket__WeChatTranscript__c</referenceTo>
        <relationshipLabel>WeChat Transcript Items</relationshipLabel>
        <relationshipName>WeChatTranscriptItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WeChat Transcript Item</label>
    <nameField>
        <displayFormat>WTI-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Transcript Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>